cabal-version:      2.4
name:               hblogger
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             lczm
maintainer:         zemingchua@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    hs-source-dirs: src
    build-depends:
        base
    exposed-modules:
        Hblogger
            Hblogger.Convert
            Hblogger.Html
                Hblogger.Html.Internal
            Hblogger.Markup

executable hblogger
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:
    other-modules: 
        OptParse

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    
        base ^>=4.17.0.0,
        directory,
        optparse-applicative,
        hblogger
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:
        -Wall -O
